testData/annotator/InvalidPackage/ImportPortTypeTest.secarc
package InvalidPackage;

component ImportPortTypeTest {

    accesscontrol off;

    port in <error>String</error> test;
}